--- a/Mechanist/src/config/ChickenChunks.cfg
+++ b/Mechanist/src/config/ChickenChunks.cfg
@@ -5,7 +5,7 @@
 players
 {
 	#Forge gives everyone 12500 by default
-	DEFAULT=5000
+	DEFAULT=500
 	#For server op's only.
 	OP=5000
 }
@@ -20,12 +20,12 @@ allowoffline
 #Set to false to deny a player access to the chunk viewer
 allowchunkviewer
 {
-	DEFAULT=true
+	DEFAULT=false
 	OP=true
 }
 
 #The number of minutes since last login within which chunks from a player will remain active, 0 for infinite.
-awayTimeout=0
+awayTimeout=1440
 
 #Sets lasers to render as an outline instead of a solid square.
 lasersRenderHollow=false
