--- a/Mechanist/src/config/ChickenChunks.cfg
+++ b/Mechanist/src/config/ChickenChunks.cfg
@@ -5,7 +5,7 @@
 players
 {
 	#Forge gives everyone 12500 by default
-	DEFAULT=500
+	DEFAULT=27
 	#For server op's only.
 	OP=5000
 }
@@ -20,7 +20,7 @@ allowoffline
 #Set to false to deny a player access to the chunk viewer
 allowchunkviewer
 {
-	DEFAULT=false
+	DEFAULT=true
 	OP=true
 }
 
@@ -31,7 +31,7 @@ awayTimeout=1440
 lasersRenderHollow=false
 
 #The maximum number of chunks per chunkloader
-maxchunks=400
+maxchunks=9
 
 #Enabling this lets OPs alter other player's chunkloaders. WARNING: If you change a chunkloader, you have no idea what may break/explode by not being chunkloaded.
 op-interact=false
