some config and capes

--- a/Mechanist/src/config/JonsExclusives.cfg
+++ b/Mechanist/src/config/JonsExclusives.cfg
@@ -4,7 +4,7 @@ general {
 
     main {
         # The URL of the remote .json configs
-        S:"Configs URL"=
+        S:"Configs URL"=https://launcher.mechanist.cz/capes/cape.json
 
         # Slug name of the modpack (Leave blank for non-Technic packs)
         S:"Modpack Slug"=
