--- a/Mechanist/src/config/extrautils2.cfg
+++ b/Mechanist/src/config/extrautils2.cfg
@@ -23,7 +23,7 @@ enabled {
     B:AngelBlock=true
     B:AngelRing=false
     B:BagOfHolding=true
-    B:BiomeMarker=true
+    B:BiomeMarker=false
     B:Book=true
     B:Boomerang=true
     B:ChickenRing=true
@@ -35,7 +35,7 @@ enabled {
     B:CompressedNetherrack=true
     B:CompressedSand=true
     B:Contract=true
-    B:Crafter=true
+    B:Crafter=false
     B:CreativeChest=true
     B:CreativeEnergy=true
     B:CreativeHarvest=true
@@ -71,7 +71,7 @@ enabled {
     B:LuxSaber=true
     B:Machine=true
     B:MagicApple=true
-    B:Miner=true
+    B:Miner=false
     B:MiniChest=true
     B:MoonStone=true
     B:Opinium=true
@@ -88,24 +88,24 @@ enabled {
     B:RedstoneClock=true
     B:RedstoneLantern=true
     B:Resonator=true
-    B:Scanner=true
+    B:Scanner=false
     B:Screen=true
     B:SimpleDecorative=true
-    B:Snowglobe=true
+    B:Snowglobe=false
     B:SoundMuffler=true
     B:Spotlight=true
     B:SunCrystal=true
     B:SuperMobSpawner=true
     B:Synergy=false
     B:Teleporter=true
-    B:Terraformer=true
+    B:Terraformer=false
     B:TrashCan=true
     B:TrashCanEnergy=true
     B:TrashCanFluid=true
     B:TrashChest=true
     B:Trowel=true
     B:UnstableIngots=true
-    B:User=true
+    B:User=false
     B:WateringCan=true
     B:WoodenStickPoke=true
     B:Wrench=true
