--- a/Mechanist/src/config/ic2/ic2.cfg
+++ b/Mechanist/src/config/ic2/ic2.cfg
@@ -65,10 +65,10 @@ crafting {
     B:enableCraftingGunpowder=true
 
     # Enable crafting of ITNT
-    B:enableCraftingITnt=true
+    B:enableCraftingITnt=false
 
     # Enable crafting of nukes
-    B:enableCraftingNuke=true
+    B:enableCraftingNuke=false
 
     # Enable crafting of Piston out of bronze or silver
     B:enableCraftingPiston=true
