ukládání záloh v tar.gz formátu

--- a/Mechanist/src/config/aroma1997/aromabackup.cfg
+++ b/Mechanist/src/config/aroma1997/aromabackup.cfg
@@ -2,7 +2,7 @@
 
 backup {
     # The compression type used for backups. The following ones are available: "zip", "tar.gz", "tar"
-    S:compressionType=zip
+    S:compressionType=tar.gz
 }
 
 
