úprava receptů pro advanced generators

--- a/Mechanist/src/config/AdvGenerators/overrides/recipes.cfg
+++ b/Mechanist/src/config/AdvGenerators/overrides/recipes.cfg
@@ -1,10 +1,10 @@
 recipes {
-    T = B:piston
-    P = B:glass_pane
+    T = B:thermaldynamics:duct_0@4
+    P = B:ic2:blockutility@3
 
-    R = I:redstone
-    I = I:iron_ingot
-    Q = I:quartz
+    R = I:thermalfoundation:material@513
+    I = I:ic2c_extras:denseironplate
+    Q = I:jaopca:item_platedensequartz
 
     M = I:advgenerators:power_io
     F = I:advgenerators:iron_frame
