finální změny v advanced generators receptech

--- a/Mechanist/src/config/AdvGenerators/overrides/recipes.cfg
+++ b/Mechanist/src/config/AdvGenerators/overrides/recipes.cfg
@@ -4,7 +4,7 @@ recipes {
 
     R = I:thermalfoundation:material@513
     I = I:ic2c_extras:denseironplate
-    Q = I:jaopca:item_platedensequartz
+    Q = I:ic2:itemmisc@452
 
     M = I:advgenerators:power_io
     F = I:advgenerators:iron_frame
@@ -12,7 +12,7 @@ recipes {
     W = I:advgenerators:iron_tubing
 
     recipes {
-        S = OD:stickWood
+        S = I:enderio:item_material@8
 
         I__
         _S_ => I:advgenerators:iron_tubing * 16
