odstraněny nežádoucí itemy (nástroje, brnění)

--- a/Mechanist/src/config/cofh/thermalexpansion/common.cfg
+++ b/Mechanist/src/config/cofh/thermalexpansion/common.cfg
@@ -228,7 +228,7 @@ Item {
     }
 
     Satchel {
-        B:Enable=true
+        B:Enable=false
     }
 
     Augment {
@@ -283,7 +283,7 @@ Machine {
     B:DisableAutoOutput=false
 
     # If TRUE, Machines are securable.
-    B:Securable=true
+    B:Securable=false
 
     # If TRUE, Machines will have much smaller internal energy (RF) storage. Processing speed will no longer scale with internal energy.
     B:SmallStorage=false
@@ -684,7 +684,7 @@ Storage {
         B:Creative=true
 
         # If TRUE, Strongboxes are enabled.
-        B:Enable=true
+        B:Enable=false
 
         # If TRUE, Strongboxes are securable.
         B:Securable=true
