--- a/Mechanist/src/config/cofh/thermalfoundation/common.cfg
+++ b/Mechanist/src/config/cofh/thermalfoundation/common.cfg
@@ -38,87 +38,87 @@ Equipment {
     Armor {
 
         Copper {
-            B:Boots=true
-            B:Chestplate=true
-            B:Helmet=true
-            B:Leggings=true
+            B:Boots=false
+            B:Chestplate=false
+            B:Helmet=false
+            B:Leggings=false
         }
 
         Tin {
-            B:Boots=true
-            B:Chestplate=true
-            B:Helmet=true
-            B:Leggings=true
+            B:Boots=false
+            B:Chestplate=false
+            B:Helmet=false
+            B:Leggings=false
         }
 
         Silver {
-            B:Boots=true
-            B:Chestplate=true
-            B:Helmet=true
-            B:Leggings=true
+            B:Boots=false
+            B:Chestplate=false
+            B:Helmet=false
+            B:Leggings=false
         }
 
         Lead {
-            B:Boots=true
-            B:Chestplate=true
-            B:Helmet=true
-            B:Leggings=true
+            B:Boots=false
+            B:Chestplate=false
+            B:Helmet=false
+            B:Leggings=false
         }
 
         Aluminum {
-            B:Boots=true
-            B:Chestplate=true
-            B:Helmet=true
-            B:Leggings=true
+            B:Boots=false
+            B:Chestplate=false
+            B:Helmet=false
+            B:Leggings=false
         }
 
         Nickel {
-            B:Boots=true
-            B:Chestplate=true
-            B:Helmet=true
-            B:Leggings=true
+            B:Boots=false
+            B:Chestplate=false
+            B:Helmet=false
+            B:Leggings=false
         }
 
         Platinum {
-            B:Boots=true
-            B:Chestplate=true
-            B:Helmet=true
-            B:Leggings=true
+            B:Boots=false
+            B:Chestplate=false
+            B:Helmet=false
+            B:Leggings=false
         }
 
         Steel {
-            B:Boots=true
-            B:Chestplate=true
-            B:Helmet=true
-            B:Leggings=true
+            B:Boots=false
+            B:Chestplate=false
+            B:Helmet=false
+            B:Leggings=false
         }
 
         Electrum {
-            B:Boots=true
-            B:Chestplate=true
-            B:Helmet=true
-            B:Leggings=true
+            B:Boots=false
+            B:Chestplate=false
+            B:Helmet=false
+            B:Leggings=false
         }
 
         Invar {
-            B:Boots=true
-            B:Chestplate=true
-            B:Helmet=true
-            B:Leggings=true
+            B:Boots=false
+            B:Chestplate=false
+            B:Helmet=false
+            B:Leggings=false
         }
 
         Bronze {
-            B:Boots=true
-            B:Chestplate=true
-            B:Helmet=true
-            B:Leggings=true
+            B:Boots=false
+            B:Chestplate=false
+            B:Helmet=false
+            B:Leggings=false
         }
 
         Constantan {
-            B:Boots=true
-            B:Chestplate=true
-            B:Helmet=true
-            B:Leggings=true
+            B:Boots=false
+            B:Chestplate=false
+            B:Helmet=false
+            B:Leggings=false
         }
 
     }
@@ -126,183 +126,183 @@ Equipment {
     Tools {
 
         Copper {
-            B:Axe=true
-            B:Bow=true
-            B:Excavator=true
-            B:FishingRod=true
-            B:Hammer=true
-            B:Hoe=true
-            B:Pickaxe=true
-            B:Shears=true
-            B:Shield=true
-            B:Shovel=true
+            B:Axe=false
+            B:Bow=false
+            B:Excavator=false
+            B:FishingRod=false
+            B:Hammer=false
+            B:Hoe=false
+            B:Pickaxe=false
+            B:Shears=false
+            B:Shield=false
+            B:Shovel=false
             B:Sickle=true
-            B:Sword=true
+            B:Sword=false
         }
 
         Tin {
-            B:Axe=true
-            B:Bow=true
-            B:Excavator=true
-            B:FishingRod=true
-            B:Hammer=true
-            B:Hoe=true
-            B:Pickaxe=true
-            B:Shears=true
-            B:Shield=true
-            B:Shovel=true
+            B:Axe=false
+            B:Bow=false
+            B:Excavator=false
+            B:FishingRod=false
+            B:Hammer=false
+            B:Hoe=false
+            B:Pickaxe=false
+            B:Shears=false
+            B:Shield=false
+            B:Shovel=false
             B:Sickle=true
-            B:Sword=true
+            B:Sword=false
         }
 
         Silver {
-            B:Axe=true
-            B:Bow=true
-            B:Excavator=true
-            B:FishingRod=true
-            B:Hammer=true
-            B:Hoe=true
-            B:Pickaxe=true
-            B:Shears=true
-            B:Shield=true
-            B:Shovel=true
+            B:Axe=false
+            B:Bow=false
+            B:Excavator=false
+            B:FishingRod=false
+            B:Hammer=false
+            B:Hoe=false
+            B:Pickaxe=false
+            B:Shears=false
+            B:Shield=false
+            B:Shovel=false
             B:Sickle=true
-            B:Sword=true
+            B:Sword=false
         }
 
         Lead {
-            B:Axe=true
-            B:Bow=true
-            B:Excavator=true
-            B:FishingRod=true
-            B:Hammer=true
-            B:Hoe=true
-            B:Pickaxe=true
-            B:Shears=true
-            B:Shield=true
-            B:Shovel=true
+            B:Axe=false
+            B:Bow=false
+            B:Excavator=false
+            B:FishingRod=false
+            B:Hammer=false
+            B:Hoe=false
+            B:Pickaxe=false
+            B:Shears=false
+            B:Shield=false
+            B:Shovel=false
             B:Sickle=true
-            B:Sword=true
+            B:Sword=false
         }
 
         Aluminum {
-            B:Axe=true
-            B:Bow=true
-            B:Excavator=true
-            B:FishingRod=true
-            B:Hammer=true
-            B:Hoe=true
-            B:Pickaxe=true
-            B:Shears=true
-            B:Shield=true
-            B:Shovel=true
+            B:Axe=false
+            B:Bow=false
+            B:Excavator=false
+            B:FishingRod=false
+            B:Hammer=false
+            B:Hoe=false
+            B:Pickaxe=false
+            B:Shears=false
+            B:Shield=false
+            B:Shovel=false
             B:Sickle=true
-            B:Sword=true
+            B:Sword=false
         }
 
         Nickel {
-            B:Axe=true
-            B:Bow=true
-            B:Excavator=true
-            B:FishingRod=true
-            B:Hammer=true
-            B:Hoe=true
-            B:Pickaxe=true
-            B:Shears=true
-            B:Shield=true
-            B:Shovel=true
+            B:Axe=false
+            B:Bow=false
+            B:Excavator=false
+            B:FishingRod=false
+            B:Hammer=false
+            B:Hoe=false
+            B:Pickaxe=false
+            B:Shears=false
+            B:Shield=false
+            B:Shovel=false
             B:Sickle=true
-            B:Sword=true
+            B:Sword=false
         }
 
         Platinum {
-            B:Axe=true
-            B:Bow=true
-            B:Excavator=true
-            B:FishingRod=true
-            B:Hammer=true
-            B:Hoe=true
-            B:Pickaxe=true
-            B:Shears=true
-            B:Shield=true
-            B:Shovel=true
+            B:Axe=false
+            B:Bow=false
+            B:Excavator=false
+            B:FishingRod=false
+            B:Hammer=false
+            B:Hoe=false
+            B:Pickaxe=false
+            B:Shears=false
+            B:Shield=false
+            B:Shovel=false
             B:Sickle=true
-            B:Sword=true
+            B:Sword=false
         }
 
         Steel {
-            B:Axe=true
-            B:Bow=true
-            B:Excavator=true
-            B:FishingRod=true
-            B:Hammer=true
-            B:Hoe=true
-            B:Pickaxe=true
-            B:Shears=true
-            B:Shield=true
-            B:Shovel=true
+            B:Axe=false
+            B:Bow=false
+            B:Excavator=false
+            B:FishingRod=false
+            B:Hammer=false
+            B:Hoe=false
+            B:Pickaxe=false
+            B:Shears=false
+            B:Shield=false
+            B:Shovel=false
             B:Sickle=true
-            B:Sword=true
+            B:Sword=false
         }
 
         Electrum {
-            B:Axe=true
-            B:Bow=true
-            B:Excavator=true
-            B:FishingRod=true
-            B:Hammer=true
-            B:Hoe=true
-            B:Pickaxe=true
-            B:Shears=true
-            B:Shield=true
-            B:Shovel=true
+            B:Axe=false
+            B:Bow=false
+            B:Excavator=false
+            B:FishingRod=false
+            B:Hammer=false
+            B:Hoe=false
+            B:Pickaxe=false
+            B:Shears=false
+            B:Shield=false
+            B:Shovel=false
             B:Sickle=true
-            B:Sword=true
+            B:Sword=false
         }
 
         Invar {
-            B:Axe=true
-            B:Bow=true
-            B:Excavator=true
-            B:FishingRod=true
-            B:Hammer=true
-            B:Hoe=true
-            B:Pickaxe=true
-            B:Shears=true
-            B:Shield=true
-            B:Shovel=true
+            B:Axe=false
+            B:Bow=false
+            B:Excavator=false
+            B:FishingRod=false
+            B:Hammer=false
+            B:Hoe=false
+            B:Pickaxe=false
+            B:Shears=false
+            B:Shield=false
+            B:Shovel=false
             B:Sickle=true
-            B:Sword=true
+            B:Sword=false
         }
 
         Bronze {
-            B:Axe=true
-            B:Bow=true
-            B:Excavator=true
-            B:FishingRod=true
-            B:Hammer=true
-            B:Hoe=true
-            B:Pickaxe=true
-            B:Shears=true
-            B:Shield=true
-            B:Shovel=true
+            B:Axe=false
+            B:Bow=false
+            B:Excavator=false
+            B:FishingRod=false
+            B:Hammer=false
+            B:Hoe=false
+            B:Pickaxe=false
+            B:Shears=false
+            B:Shield=false
+            B:Shovel=false
             B:Sickle=true
-            B:Sword=true
+            B:Sword=false
         }
 
         Constantan {
-            B:Axe=true
-            B:Bow=true
-            B:Excavator=true
-            B:FishingRod=true
-            B:Hammer=true
-            B:Hoe=true
-            B:Pickaxe=true
-            B:Shears=true
-            B:Shield=true
-            B:Shovel=true
+            B:Axe=false
+            B:Bow=false
+            B:Excavator=false
+            B:FishingRod=false
+            B:Hammer=false
+            B:Hoe=false
+            B:Pickaxe=false
+            B:Shears=false
+            B:Shield=false
+            B:Shovel=false
             B:Sickle=true
-            B:Sword=true
+            B:Sword=false
         }
 
     }
@@ -327,31 +327,31 @@ Equipment {
         }
 
         Iron {
-            B:Bow=true
-            B:Excavator=true
-            B:FishingRod=true
-            B:Hammer=true
-            B:Shield=true
+            B:Bow=false
+            B:Excavator=false
+            B:FishingRod=false
+            B:Hammer=false
+            B:Shield=false
             B:Sickle=true
         }
 
         Diamond {
-            B:Bow=true
-            B:Excavator=true
-            B:FishingRod=true
-            B:Hammer=true
-            B:Shears=true
-            B:Shield=true
+            B:Bow=false
+            B:Excavator=false
+            B:FishingRod=false
+            B:Hammer=false
+            B:Shears=false
+            B:Shield=false
             B:Sickle=true
         }
 
         Gold {
-            B:Bow=true
-            B:Excavator=true
-            B:FishingRod=true
-            B:Hammer=true
-            B:Shears=true
-            B:Shield=true
+            B:Bow=false
+            B:Excavator=false
+            B:FishingRod=false
+            B:Hammer=false
+            B:Shears=false
+            B:Shield=false
             B:Sickle=true
         }
 
