schovány florby s thermalu - grief

--- a/Mechanist/src/config/cofh/thermalexpansion/client.cfg
+++ b/Mechanist/src/config/cofh/thermalexpansion/client.cfg
@@ -30,7 +30,7 @@ Interface {
         I:DefaultLevel=0
 
         # If TRUE, Florbs will be completely hidden from Creative Mode and JEI. [default: false]
-        B:HideFlorbs=false
+        B:HideFlorbs=true
 
         # If TRUE, Morbs will be completely hidden from Creative Mode and JEI. [default: false]
         B:HideMorbs=false
