pár drobných změn

--- a/Mechanist/src/config/JAOPCA.cfg
+++ b/Mechanist/src/config/JAOPCA.cfg
@@ -617,6 +617,7 @@ iron {
 
     # The synonyms for this ore to use for Ore Dictionary registration.
     S:synonyms <
+        plateIron
      >
 }
 
