--- a/Mechanist/src/config/computercraft.cfg
+++ b/Mechanist/src/config/computercraft.cfg
@@ -65,8 +65,11 @@ http {
     # Set this to "*" to access to the entire internet. Example: "*.pastebin.com" will restrict access to just subdomains of pastebin.com.
     # You can use domain names ("pastebin.com"), wildcards ("*.pastebin.com") or CIDR notation ("127.0.0.0/8").
     S:allowed_domains <
+        pastebin.com
         *.pastebin.com
+        github.com
         *.github.com
+        gitlab.com
         *.gitlab.com
      >
 
