--- a/Mechanist/src/config/integrateddynamicscompat.cfg
+++ b/Mechanist/src/config/integrateddynamicscompat.cfg
@@ -24,7 +24,7 @@ core {
     B:forestry=true
 
     # IC2 EU reader aspects.
-    B:ic2=true
+    B:ic2=false
 
     # Integration for Integrated Dynamics recipes.
     B:jei=true
