--- a/Mechanist/src/config/extrautils2.cfg
+++ b/Mechanist/src/config/extrautils2.cfg
@@ -19,125 +19,125 @@
 
 
 enabled {
-    B:AnalogCrafter=true
+    B:AnalogCrafter=false
     B:AngelBlock=true
     B:AngelRing=false
-    B:BagOfHolding=true
+    B:BagOfHolding=false
     B:BiomeMarker=false
-    B:Book=true
-    B:Boomerang=true
-    B:ChickenRing=true
+    B:Book=false
+    B:Boomerang=false
+    B:ChickenRing=false
     B:ChunkLoader=false
-    B:CompoundBow=true
+    B:CompoundBow=false
     B:CompressedCobblestone=true
     B:CompressedDirt=true
     B:CompressedGravel=true
     B:CompressedNetherrack=true
     B:CompressedSand=true
-    B:Contract=true
+    B:Contract=false
     B:Crafter=false
-    B:CreativeChest=true
-    B:CreativeEnergy=true
-    B:CreativeHarvest=true
+    B:CreativeChest=false
+    B:CreativeEnergy=false
+    B:CreativeHarvest=false
     B:CursedEarth=true
-    B:DecorativeBedrock=true
-    B:DecorativeGlass=true
-    B:DecorativeSolid=true
-    B:DecorativeSolidWood=true
+    B:DecorativeBedrock=false
+    B:DecorativeGlass=false
+    B:DecorativeSolid=false
+    B:DecorativeSolidWood=false
     B:"Deep Dark"=true
     B:Drum=true
     B:EnderLilly=true
     B:EnderShard=true
     B:ExtraUtils2_Quarry_Dim=true
-    B:FakeCopy=true
+    B:FakeCopy=false
     B:Filter=true
     B:FilterFluids=true
-    B:FireAxe=true
+    B:FireAxe=false
     B:FlatTransferNode=true
-    B:GlassCutter=true
+    B:GlassCutter=false
     B:GoldenLasso=true
     B:Indexer=true
     B:IndexerRemote=true
-    B:IneffableGlass=true
-    B:Ingredients=true
+    B:IneffableGlass=false
+    B:Ingredients=false
     B:InteractionProxy=true
     B:ItemBuildersWand=true
-    B:ItemCreativeBuildersWand=true
-    B:ItemCreativeDestructionWand=true
-    B:ItemDestructionWand=true
-    B:Klein=true
-    B:LargishChest=true
-    B:LawSword=true
-    B:LuxSaber=true
-    B:Machine=true
-    B:MagicApple=true
+    B:ItemCreativeBuildersWand=false
+    B:ItemCreativeDestructionWand=false
+    B:ItemDestructionWand=false
+    B:Klein=false
+    B:LargishChest=false
+    B:LawSword=false
+    B:LuxSaber=false
+    B:Machine=false
+    B:MagicApple=false
     B:Miner=false
-    B:MiniChest=true
-    B:MoonStone=true
-    B:Opinium=true
-    B:PassiveGenerator=true
-    B:PlayerChest=true
-    B:PowerBattery=true
-    B:PowerManager=true
-    B:PowerOverload=true
-    B:PowerTransmitter=true
+    B:MiniChest=false
+    B:MoonStone=false
+    B:Opinium=false
+    B:PassiveGenerator=false
+    B:PlayerChest=false
+    B:PowerBattery=false
+    B:PowerManager=false
+    B:PowerOverload=false
+    B:PowerTransmitter=false
     B:Quarry=true
     B:QuarryProxy=true
-    B:RainbowGenerator=true
-    B:RedOrchid=true
+    B:RainbowGenerator=false
+    B:RedOrchid=false
     B:RedstoneClock=true
-    B:RedstoneLantern=true
-    B:Resonator=true
+    B:RedstoneLantern=false
+    B:Resonator=false
     B:Scanner=false
     B:Screen=true
-    B:SimpleDecorative=true
+    B:SimpleDecorative=false
     B:Snowglobe=false
     B:SoundMuffler=true
-    B:Spotlight=true
-    B:SunCrystal=true
-    B:SuperMobSpawner=true
+    B:Spotlight=false
+    B:SunCrystal=false
+    B:SuperMobSpawner=false
     B:Synergy=false
-    B:Teleporter=true
+    B:Teleporter=false
     B:Terraformer=false
     B:TrashCan=true
     B:TrashCanEnergy=true
     B:TrashCanFluid=true
     B:TrashChest=true
-    B:Trowel=true
-    B:UnstableIngots=true
+    B:Trowel=false
+    B:UnstableIngots=false
     B:User=false
     B:WateringCan=true
-    B:WoodenStickPoke=true
-    B:Wrench=true
-    B:additionalVanillaRecipes=true
-    B:ironwood=true
-    B:pipe=true
-    B:potion_Purge=true
-    B:potion_doom=true
-    B:potion_fizzy_lifting=true
-    B:potion_gravity=true
-    B:potion_greek_fire=true
-    B:potion_love=true
-    B:potion_relapse=true
-    B:potion_second_chance=true
+    B:WoodenStickPoke=false
+    B:Wrench=false
+    B:additionalVanillaRecipes=false
+    B:ironwood=false
+    B:pipe=false
+    B:potion_Purge=false
+    B:potion_doom=false
+    B:potion_fizzy_lifting=false
+    B:potion_gravity=false
+    B:potion_greek_fire=false
+    B:potion_love=false
+    B:potion_relapse=false
+    B:potion_second_chance=false
     B:sendCapabilitiesAfterDimensionChange=true
     B:sickle_diamond=true
-    B:sickle_gold=true
-    B:sickle_iron=true
-    B:sickle_stone=true
-    B:sickle_wood=true
-    B:spike_creative=true
+    B:sickle_gold=false
+    B:sickle_iron=false
+    B:sickle_stone=false
+    B:sickle_wood=false
+    B:spike_creative=false
     B:spike_diamond=true
-    B:spike_gold=true
-    B:spike_iron=true
-    B:spike_stone=true
-    B:spike_wood=true
-    B:squidSpawnRestrictions=true
+    B:spike_gold=false
+    B:spike_iron=false
+    B:spike_stone=false
+    B:spike_wood=false
+    B:squidSpawnRestrictions=false
     B:tinkers_construct_integration=true
-    B:villager_alchemist=true
-    B:villager_red_mechanic=true
-    B:villager_shady_merchant=true
-    B:wall_world_type=true
+    B:villager_alchemist=false
+    B:villager_red_mechanic=false
+    B:villager_shady_merchant=false
+    B:wall_world_type=false
 }
 
 
