vypnuty extrautils build wand

--- a/Mechanist/src/config/extrautils2.cfg
+++ b/Mechanist/src/config/extrautils2.cfg
@@ -61,7 +61,7 @@ enabled {
     B:IneffableGlass=false
     B:Ingredients=false
     B:InteractionProxy=true
-    B:ItemBuildersWand=true
+    B:ItemBuildersWand=false
     B:ItemCreativeBuildersWand=false
     B:ItemCreativeDestructionWand=false
     B:ItemDestructionWand=false
