--- a/Mechanist/src/config/vanillafix.cfg
+++ b/Mechanist/src/config/vanillafix.cfg
@@ -3,7 +3,7 @@
 crashes {
     B:disableReturnToMainMenu=false
     I:errorNotificationDuration=30000
-    S:hasteURL=https://paste.dimdev.org
+    S:hasteURL=https://haste.lipovcan.cz/
     B:replaceErrorNotifications=false
 
     # Valid values:
